# wasm-cookbook

./: README.md
vol01/: README.md
vol01/AssemblyScript/: README.md
vol01/AssemblyScript/benchmark/: Makefile  deno_bench.js  fib.js  (+2 more)
vol01/Dart/: README.md
vol02/: .gitignore  README.md
vol02/ch01/: Makefile  README.md
vol02/ch02/: README.md
vol02/ch02/example2/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
vol02/ch02/example2/src/: bindings.rs  example.ts  extension.ts  lib.rs
vol02/ch03/: README.md
vol02/ch03/todo-app/: Cargo.toml  LICENSE-MIT  Makefile  README.md  index.html  index.scss
vol02/ch03/todo-app/src/: app.rs  pages.rs
vol02/ch04/: README.md
vol03/: README.md
vol03/ch01/: README.md  index.html  package.json  pnpm-lock.yaml
vol03/ch02/: README.md
vol03/ch03/: Makefile  README.md
vol03/ch04/: README.md
vol03/ch05/: README.md  wadm.yaml
vol04/: README.md
vol04/ch01/: Makefile  README.md  custom.wat  det.ts  det.wat  exception.ts  exception.wat  gc.ts  gc.wat  jsstring.ts  jsstring.wat  memory64.ts  memory64.wat  multimemory.ts  multimemory.wat  relaxed.ts  relaxed.wat  tailcall.ts  tailcall.wat  typedref.ts  typedref.wat
vol04/ch02/: README.md
vol04/ch03/: README.md  app.js  index.html
vol04/ch04/: README.md
vol04/ch05/: Makefile  README.md  containerd-wasmtime.toml  node.dockerfile
vol05/: README.md
vol05/ch02/: README.md
vol05/ch03/: .gitignore  Cargo.toml  README.md  compose.yml
vol05/ch04/: README.md
vol05/ch05/: README.md
vol05/proxy_wasm/: Makefile  README.md  envoy.yaml
(+161 files in other folders)
