[package]
name = "example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[dependencies]
wit-bindgen-rt = { version = "0.33.0", features = ["bitflags"] }

[package.metadata.component]
package = "vscode:example"
